--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,4 +1,9 @@
-.header {
+.favourite {
+  height: 100vh;
+  width: 20%;
 }
-.content {
+.displayresult {
+  padding: 20px !important;
+  margin-bottom: 20px !important;
+  width: 80%;
 }
